# blaze

./: .gitignore  A_Step-by-step_guide_for_building_an_AWS_AFI.MD  CITATION.cff  Cargo.toml  LICENSE.md  README.md  do.sh  parse_log_to_csv.py  setFpgaImages.sh
.github/workflows/: rust.yml
benches/: msm_bench.rs  ntt_bench.rs
configs/: c1100_cfg.json  msm_bls377_dma_cfg.json  msm_bls381_hbm_cfg.json  msm_bn254_dma_cfg.json  ntt_cfg.json  u250_cfg.json
rust-bench/: Cargo.toml  README.md
rust-bench/benches/: msm.rs  msm_single.rs
rust-bench/src/: lib.rs  util.rs
rust-bench/tests/: msm.rs
rust-rw-device/: Cargo.toml
rust-rw-device-g2/: .gitignore  Cargo.toml  README.md
rust-rw-device-g2/src/: lib.rs  main.rs  rw_msm_to_dram.rs
rust-rw-device/src/: lib.rs  main.rs  rw_msm_to_dram.rs
src/: error.rs  lib.rs  utils.rs
src/driver_client/: dclient.rs  dclient_cfg.rs  dclient_code.rs  mod.rs
src/ingo_hash/: dma_buffer.rs  hash_hw_code.rs  mod.rs  poseidon_api.rs  utils.rs
src/ingo_msm/: mod.rs  msm_api.rs  msm_cfg.rs  msm_hw_code.rs
src/ingo_ntt/: help.py  mod.rs  ntt_api.rs  ntt_cfg.rs  ntt_data.rs  ntt_hw_code.rs  ntt_utils.rs
tests/: integration_msm.rs  integration_msm_hbm.rs  integration_ntt.rs  integration_poseidon.rs
tests/msm/: mod.rs
tests/ntt/: mod.rs
xdma/: modules.order  xdma.mod.c  xdma_mod.c
