[package]
authors = ["Ingonyama"]
description = "Library for ZK acceleration on Xilinx FPGAs."
edition = "2021"
homepage = "https://www.ingonyama.com"
name = "ingo-blaze"
repository = "https://github.com/ingonyama-zk/blaze"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
ark-bls12-377 = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-bn254 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-std = "0.3.0"
csv = "1.1"
libc = "0.2.126"
num = "0.4"
num-bigint = "0.4"
num-traits = "0.2.15"
packed_struct = "0.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4.0"
env_logger = "0.10.0"
log = "0.4.0"
rand = "0.8.5"
rayon = "1.6.1"
strum = "0.24"
strum_macros = "0.24"

[[bench]]
harness = false
name = "ntt_bench"
