[package]
name = "ingo_x"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-377 = "0.3.0"
rand = "^0"
rand_chacha = "^0"
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
num-bigint = "0.4.3"
rust-rw-device = { path = "../rust-rw-device"}

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "msm"
path = "benches/msm.rs"
harness = false

[[bench]]
name = "msm_single"
path = "benches/msm_single.rs"
harness = false